spacing issues fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2252,6 +2252,30 @@ tbody.collapse.in {
 .block {
   display: block !important; }
 
+@media (max-width:768px) {
+  .line-xs {
+    display:block;
+  }
+}  
+
+@media (min-width:768px) and (max-width:992px) {
+  .line-sm {
+    display:block;
+  }
+}  
+
+@media (min-width:992px) and (max-width:1200px) {
+  .line-md {
+    display:block;
+  }
+}  
+
+@media (min-width:1200px) {
+  .line-lg {
+    display:block;
+  }
+}  
+
 /***************************************************************** */
 /***************** UNCOMMENT TO SEE GRID LAYOUT ****************** */
 /* .container
@@ -2405,30 +2429,31 @@ button {
 }
 
 #signup-row .btn a {
-  border: 2px solid white;
-  border-radius: 8px;
-  color: #fff;
+  background-color: #fff;
+  border: 2px solid #fff;
+  border-radius: 8px;  
+  color: #0a3153;
   cursor: pointer;
   display: block;
   font-size: 18px;
   font-weight: 600;
   margin: 40px auto 0px auto;
-  padding: 8px 0px;
+  padding: 12px 0px;
   text-align: center;
   transition: all .2s linear;
   width: 268px;
 }
 
+.btn-gh:hover { 
+  background-color: transparent !important;
+  color: #fff !important; 
+  text-decoration: none;
+ }
+
 #propage .btn a {
   padding-bottom: 14px;
   padding-top: 14px;
 }
-
-.btn-gh:hover { 
-  background-color: #fff !important;
-  color: #0a3153 !important; 
-  text-decoration: none;
- }
 
 /* Professional Page Button */
 .scrb-frm-ctr .btn a {
@@ -2965,6 +2990,7 @@ header.navbar {
   #mem-row1-section.section {
     padding-top: 0;
     padding-bottom: 35px;
+    height: 280px;
   }
 
   #signup-row h4 a {
@@ -3137,7 +3163,9 @@ header.navbar {
 }
 
 #ftrslist-section .ftr-list-txt {
-  padding-top: 25px;
+  font-size: 16px;
+  padding-top: 20px;
+  text-align: center;
 }
 
 /* For mobile buttons */
@@ -3521,64 +3549,22 @@ header.navbar {
     width: 100%;
     height: 100%;
 }
-#pricing-row2-section .col-xs-12 > h1 {
-  margin: 45px auto;
-}
 
 #pricing-row3-section .inner-container {
   width: 57vw;
   margin: 0 auto;
 }
 
-.info-col {
-  width: 19vw;
-  float: left;
-}
-
-#pricing-row3-section .inner-container >div:first-child img {
-  padding-bottom: 4vw;
-  display: block;
-  width: 100%;  
-}
-
-#pricing-row3-section .inner-container >div:first-child img:last-child {
-  padding-bottom: 0px;
-	padding-bottom: 4vw;
-	display: block;
-	width: 100%;	
-}
-
-#pricing-row3-section .inner-container >div:first-child img:last-child {
-	padding-bottom: 0px;
-}
-
-.infog-txt
-{
-  padding-top: 2vw;
-  padding-bottom: 12vw;
-  font-size: 1.75vw;
-  text-align: left;
-}
-
-.arrowg {
-  padding-top: 5vw;
-}
-
-.arrowg img {
-  width: 23%; 
-  margin: 0 auto;
-  display: block;
-}
-
 .single-title {
   margin: 45px auto;
 }
 
-#pricing-row2-section #rscrs-row {
+#pricing-row2-section .rscrs-row {
   padding-bottom: 35px;
+  text-align: center;
 }
 
-#rscrs-row h1 {
+.rscrs-row h1 {
   font-size: 36px;
 }
 
@@ -3594,6 +3580,36 @@ header.navbar {
   margin: 35px auto 15px auto;
 }
 
+#pricing-row3-section #timeline {
+  text-align: center;
+}
+
+#pricing-row3-section .arrow-offset {
+  padding-right: 5vw;
+}
+
+#pricing-row3-section #timeline-head {
+  position:relative;
+  margin: 100px auto 0 auto;
+}
+
+#pricing-row3-section #timeline-head .milestone {
+  position:absolute;
+  bottom: 0;
+}
+
+#pricing-row3-section #timeline-head .milestone:nth-of-type(1) {
+  left: 0;
+}
+
+#pricing-row3-section #timeline-head .milestone:nth-of-type(2) {
+  left:33%;
+}
+
+#pricing-row3-section #timeline-head .milestone:nth-of-type(3) {
+  left: 66%;
+}
+
 #pricing-row3-section .reg-form {
   padding: 25px 0px;
   background-color: #DAEEFC;
@@ -3602,8 +3618,17 @@ header.navbar {
   margin: 25px 0 45px;
 }
 
+#pricing-row3-section .reg-form h3 {
+  padding-top: 20px;
+  padding-bottom: 0;
+}
+
+#pricing-row3-section .reg-form .frm-btn-con {
+  margin-top: 40px;
+}
+
 #pricing-row3-section .reg-form .form-control {
-  padding: 18px 12px 12px 18px !important;
+  padding: 14px 12px 12px 12px !important;
   border: 2px solid #0a3153;
   border-radius: 6px;
   font-size: 18px;
@@ -3618,168 +3643,45 @@ header.navbar {
 /***************** Pricing Page  Media Queries **************************/
 /************************************************************************/
 
-@media (min-width: 550px) {
+@media (min-width: 768px) {
+  #pricing-row3-section #timeline-head {
+    width: 74vw;
+  }
+
   #pricing-row3-section .inner-container {
     width: 51vw;
   }
-  
-  .info-col {
-    width: 17vw;
-  }
 
-  .infog-txt {
-    padding-bottom: 6vw;
+  #pricing-row3-section #timeline-head .milestone:nth-of-type(3) {
+    left: 66%;
+    padding-right: 8vw;
   }
 }
 
-@media (min-width: 550px) {
-  #pricing-row3-section .inner-container {
-		width: 51vw;
-	}
-	
-  .info-col {
-		width: 17vw;
-	}
-
-	.infog-txt {
-		padding-bottom: 6vw;
-	}
-}
-
-@media (min-width: 0px) and (max-width: 550px) {
+@media (min-width: 0px) and (max-width: 768px) {
   #pricing-row3-section .inner-container {
     width: 80vw;
     margin: 0 auto;
   }
 
-  .info-col {
-    width: 26.6vw;
-    float: left;
+  #pricing-row3-section .arrow-offset {
+    padding-right: 11vw;
+  }
+
+  #pricing-row3-section #timeline-head .milestone:nth-of-type(1) p {
+    padding-right: 20px;
+  }
+
+  #pricing-row3-section #timeline-head .milestone:nth-of-type(2) {
+    width:40%;
+    left:30%;
+  }
+
+  #pricing-row3-section #timeline-head .milestone:nth-of-type(3) {
+    width:40%;
   }
 }
 
-@media (min-width: 300px) and (max-width: 550px) {
-  .infog-txt {
-    font-size: 3vw;
-  }
-  
-  .arrowg {
-    padding-top: 5vw;
-  }
-  
-  .arrowg img {
-    width: 28%; 
-    margin: 0 auto;
-    display: block;
-  }
-
-  #pricing-row3-section .inner-container >div:first-child img {
-    padding-bottom: 12vw;
-  }  
-}
-
-@media (max-width: 300px) { 
-	.infog-txt {
-		font-size: 3vw;
-	}
-
-	.arrowg {
-		padding-top: 5vw;
-	}
-
-	.arrowg img {
-		width: 28%;	
-		margin: 0 auto;
-		display: block;
-	}
-	
-	#pricing-row3-section .inner-container >div:first-child img {
-		padding-bottom: 12vw;
-	}
-}
-
-@media (max-width: 300px)  {
-  .infog-txt {
-    font-size: 10px;
-  }
-}
-
-@media (min-width: 215px) and (max-width: 300px) {
-  .infog-txt {
-    font-size: 10px;
-  }
-}
-
-@media (min-width: 0px) and (max-width: 300px) {
-  #pricing-row3-section .inner-container {
-    width: 80vw;
-    margin: 0 auto;
-  }
-
-  #pricing-row3-section .inner-container >div:first-child img {
-    padding-bottom: 53vw; 
-  }
-
-  .arrowg {
-    padding-top: 5vw;
-  }
-
-  .arrowg img {
-    width: 56%; 
-  }
-
-  .infog-txt {
-    font-size: 5vw; 
-  }
-}
-
-@media (min-width: 170px) and (max-width: 215px) {
-  .arrowg img {
-    width: 56%; 
-  }
-
-	.arrowg {
-		padding-top: 5vw;
-	}
-
-  .arrowg img {
-		width: 56%;	
-	}
-
-	.infog-txt {
-		font-size: 5vw; 
-	}
-}
-
-@media (min-width: 170px) and (max-width: 215px) {
-	.arrowg img {
-		width: 56%;	
-	}
-
-	#pricing-row3-section .inner-container >div:first-child img
-	{
-		padding-bottom: 53vw;	
-	}
-}
-
-@media (min-width: 0px) and (max-width: 170px) {
-	.arrowg {
-		display: none;	
-	}
-
-	.info-col {
-		width: 65%;
-		margin: 0 auto;
-	}
-
-	.container-fluid {
-		width: 72% ;
-	}
-
-	#pricing-row3-section .row {
-		margin-left: 0px;		
-	}
-}
 
 /******************** About Section Styles ************************** */
 #about-row1-section h1
